@@ -810,87 +810,6 @@ converted to their numeric X atoms.
     return prop;
 }
 
-DEFUN("get-x-text-property", Fget_x_text_property, Sget_x_text_property,
-      (repv win, repv prop), rep_Subr2) /*
-::doc:sawfish.wm.misc#get-x-text-property::
-get-x-text-property WINDOW PROPERTY
-::end:: */
-{
-    Window w;
-    Atom a_prop;
-    XTextProperty t_prop;
-    repv ret = Qnil;
-
-    w = x_win_from_arg (win);
-    rep_DECLARE2(prop, rep_SYMBOLP);
-    if (w == 0)
-	return WINDOWP(win) ? Qnil : rep_signal_arg_error (win, 1);
-    a_prop = XInternAtom (dpy, rep_STR(rep_SYM(prop)->name), False);
-
-    if (XGetTextProperty (dpy, w, &t_prop, a_prop) != 0)
-    {
-	char **list;
-	int count;
-	if (XTextPropertyToStringList (&t_prop, &list, &count) != 0)
-	{
-	    int i;
-	    ret = Fmake_vector (rep_MAKE_INT(count), Qnil);
-	    for (i = 0; i < count; i++)
-		rep_VECTI(ret, i) = rep_string_dup (list[i]);
-	    XFreeStringList (list);
-	}
-	XFree (t_prop.value);
-    }
-
-    return ret;
-}
-
-DEFUN("set-x-text-property", Fset_x_text_property, Sset_x_text_property, 
-      (repv win, repv prop, repv vect, repv enc), rep_Subr4) /*
-::doc:sawfish.wm.misc#set-x-text-prooperty::
-set-x-text-property WINDOW PROPERTY STRING-VECTOR [ENCODING-ATOM]
-::end:: */
-{
-    Window w;
-    Atom a_prop, enc_atom;
-    XTextProperty t_prop;
-    char **strings;
-    int count, i;
-
-    w = x_win_from_arg (win);
-    rep_DECLARE2(prop, rep_SYMBOLP);
-    rep_DECLARE3(vect, rep_VECTORP);
-    if (w == 0)
-	return WINDOWP(win) ? Qnil : rep_signal_arg_error (win, 1);
-    a_prop = XInternAtom (dpy, rep_STR(rep_SYM(prop)->name), False);
-
-    if (rep_SYMBOLP (enc))
-	enc_atom = XInternAtom (dpy, rep_STR(rep_SYM(enc)->name), False);
-    else
-	enc_atom = 0;
-
-    count = rep_VECT_LEN(vect);
-    strings = alloca (sizeof (char *) * (count + 1));
-    for (i = 0; i < count; i++)
-    {
-	if (!rep_STRINGP(rep_VECTI(vect, i)))
-	    return rep_signal_arg_error (vect, 3);
-	strings[i] = rep_STR(rep_VECTI(vect, i));
-    }
-    if (XStringListToTextProperty (strings, count, &t_prop) != 0)
-    {
-	if (enc_atom != 0)
-	    t_prop.encoding = enc_atom;
-	XSetTextProperty (dpy, w, &t_prop, a_prop);
-	XFree (t_prop.value);
-    }
-
-    if (WINDOWP (win))
-	property_cache_invalidate (win, prop);
-
-    return Qt;
-}
-
 DEFUN("send-client-message", Fsend_client_message, Ssend_client_message,
       (repv win, repv type, repv data, repv format), rep_Subr4) /*
 ::doc:sawfish.wm.events#send-client-message::
@@ -1426,8 +1345,6 @@ functions_init (void)
     rep_ADD_SUBR(Slist_x_properties);
     rep_ADD_SUBR(Sget_x_property);
     rep_ADD_SUBR(Sset_x_property);
-    rep_ADD_SUBR(Sget_x_text_property);
-    rep_ADD_SUBR(Sset_x_text_property);
     rep_ADD_SUBR(Screate_window);
     rep_ADD_SUBR(Sx_atom);
     rep_ADD_SUBR(Sx_atom_name);
