@@ -175,8 +175,6 @@ extern repv Flist_x_properties (repv win);
 extern repv Fget_x_property (repv win, repv prop);
 extern repv Fset_x_property (repv win, repv prop, repv data,
 			     repv type, repv format);
-extern repv Fget_x_text_property (repv win, repv prop);
-extern repv Fset_x_text_property (repv win, repv prop, repv vect, repv enc);
 extern repv Fsend_client_message (repv win, repv type, repv data, repv format);
 extern repv Fcreate_window (repv parent, repv x, repv y,
 			    repv width, repv height);
