@@ -1,3 +1,8 @@
+2002-10-03  John Harper  <jsh@unfactored.org>
+
+	* functions.c (Fget_x_text_property, Fset_x_text_property):
+	deleted, these are now written in lisp
+
 2002-10-01  John Harper  <jsh@unfactored.org>
 
 	* property-cache.c (property_cache_ref): fixed silly bug
